# eccomerce_agent

./: .gitignore  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  agents_ollama.py  export_graph.py  export_langgraph_png.py  graph.py  local_models.py  retrieval_generation.py  tools.py
apps/api/src/api/agents/prompts/: intent_router_agent.yaml  qa_agent.yaml  retrieval_generation.yaml
apps/api/src/api/api/: endpoints.py  middleware.py  models.py
apps/chatbot_ui/src/chatbot_ui/: app.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-prep-data.ipynb  03-RAG-pipeline.ipynb
notebooks/week_2/: 01-structured_outputs.ipynb  03.reranking.ipynb  04. prompting.ipynb
notebooks/week_2/prompts/: retrieval_generation.yaml
notebooks/week_3/: 1. langgraph.ipynb  2. query_rewriting_decomposition.ipynb
notebooks/week_3/utils/: prompt_management.py  utils.py
