[project]
name = "ai-engineering-bootcamp-prerequisites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flagembedding>=1.3.5",
    "google-genai>=1.57.0",
    "groq>=1.0.0",
    "instructor>=1.15.1",
    "ipykernel>=7.1.0",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.17.1",
    "streamlit>=1.52.2",
    "transformers==4.44.2",
]

[tool.uv.workspace]
members = ["apps/api", "apps/chatbot_ui"]

[tool.uv.sources]
api = { workspace = true }

[dependency-groups]
dev = [
    "api",
    "instructor>=1.15.1",
    "langgraph>=1.1.6",
    "langsmith>=0.7.25",
    "matplotlib>=3.10.8",
]
